--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('../utils')\n",
-    "import utils"
+    "import utils\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -20,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -39,20 +41,6 @@
       "fetched ./data/apps/plague-inc/plague-inc.apk, start decoding\n",
       "\n",
       "fetched ./data/apps/instagram/instagram.apk, start decoding\n",
-      "I: Using Apktool 2.4.1 on instagram.apk\n",
-      "I: Loading resource table...\n",
-      "I: Decoding AndroidManifest.xml with resources...\n",
-      "I: Loading resource table from file: /Users/syeehyn/Library/apktool/framework/1.apk\n",
-      "I: Regular manifest package...\n",
-      "I: Decoding file-resources...\n",
-      "I: Decoding values */* XMLs...\n",
-      "I: Baksmaling classes.dex...\n",
-      "I: Baksmaling classes2.dex...\n",
-      "I: Baksmaling classes3.dex...\n",
-      "I: Baksmaling classes4.dex...\n",
-      "I: Copying assets and libs...\n",
-      "I: Copying unknown files...\n",
-      "I: Copying original files...\n",
       "\n"
      ]
     }
@@ -60,6 +48,39 @@
    "source": [
     "cfg = json.load(open('./app-url.json'))\n",
     "utils.get_data(**cfg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## get sitemap full app dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfg = json.load(open('./sitemap.json'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 7/7824 [00:09<4:28:46,  2.06s/it] "
+     ]
+    }
+   ],
+   "source": [
+    "utils.create_sitemap_df(**cfg)"
    ]
   },
   {
