--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -68,14 +68,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 7/7824 [00:09<4:28:46,  2.06s/it] "
+      "  1%|          | 50/7824 [00:31<1:58:53,  1.09it/s]Process ForkPoolWorker-4:\n",
+      "Process ForkPoolWorker-11:\n",
+      "Process ForkPoolWorker-3:\n",
+      "Process ForkPoolWorker-14:\n",
+      "Process ForkPoolWorker-2:\n",
+      "Process ForkPoolWorker-7:\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n",
+      "Process ForkPoolWorker-9:\n",
+      "  File \"/Users/syeehyn/.local/lib/python3.7/site-packages/multiprocess/process.py\", line 297, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/Users/syeehyn/opt/anaconda3/lib/python3.7/site-packages/urllib3/connectionpool.py\", line 377, in _make_request\n",
+      "    httplib_response = conn.getresponse(buffering=True)\n",
+      "Traceback (most recent call last):\n",
+      "TypeError: getresponse() got an unexpected keyword argument 'buffering'\n",
+      "  File \"/Users/syeehyn/.local/lib/python3.7/site-packages/multiprocess/process.py\", line 297, in _bootstrap\n",
+      "    self.run()\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/syeehyn/.local/lib/python3.7/site-packages/multiprocess/process.py\", line 99, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "  File \"/Users/syeehyn/.local/lib/python3.7/site-packages/multiprocess/process.py\", line 297, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/Users/syeehyn/.local/lib/python3.7/site-packages/multiprocess/pool.py\", line 121, in worker\n",
+      "    result = (True, func(*args, **kwds))\n",
+      "Traceback (most recent call last):\n",
+      "  File \"../utils/utils.py\", line 21, in create_xml_df\n",
+      "    response = requests.get(xml).content\n",
+      "  File \"/Users/syeehyn/.local/lib/python3.7/site-packages/multiprocess/process.py\", line 297, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/Users/syeehyn/.local/lib/python3.7/site-packages/multiprocess/process.py\", line 297, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/Users/syeehyn/opt/anaconda3/lib/python3.7/site-packages/requests/api.py\", line 75, in get\n",
+      "    return request('get', url, params=params, **kwargs)\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/syeehyn/.local/lib/python3.7/site-packages/multiprocess/process.py\", line 99, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "Process ForkPoolWorker-12:\n",
+      "  File \"/Users/syeehyn/.local/lib/python3.7/site-packages/multiprocess/process.py\", line 297, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/Users/syeehyn/.local/lib/python3.7/site-packages/multiprocess/process.py\", line 99, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/Users/syeehyn/.local/lib/python3.7/site-packages/multiprocess/process.py\", line 99, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/Users/syeehyn/opt/anaconda3/lib/python3.7/site-packages/requests/api.py\", line 60, in request\n",
+      "    return session.request(method=method, url=url, **kwargs)\n",
+      "  File \"/Users/syeehyn/.local/lib/python3.7/site-packages/multiprocess/pool.py\", line 121, in worker\n",
+      "    result = (True, func(*args, **kwds))\n",
+      "  File \"/Users/syeehyn/opt/anaconda3/lib/python3.7/site-packages/requests/sessions.py\", line 533, in request\n",
+      "    resp = self.send(prep, **send_kwargs)\n",
+      "  File \"/Users/syeehyn/.local/lib/python3.7/site-packages/multiprocess/process.py\", line 99, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/Users/syeehyn/.local/lib/python3.7/site-packages/multiprocess/pool.py\", line 121, in worker\n",
+      "    result = (True, func(*args, **kwds))\n",
+      "  File \"/Users/syeehyn/.local/lib/python3.7/site-packages/multiprocess/pool.py\", line 121, in worker\n",
+      "    result = (True, func(*args, **kwds))\n",
+      "  File \"../utils/utils.py\", line 21, in create_xml_df\n",
+      "    response = requests.get(xml).content\n",
+      "  File \"/Users/syeehyn/.local/lib/python3.7/site-packages/multiprocess/process.py\", line 297, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/Users/syeehyn/opt/anaconda3/lib/python3.7/site-packages/requests/sessions.py\", line 686, in send\n",
+      "    r.content\n",
+      "  File \"/Users/syeehyn/.local/lib/python3.7/site-packages/multiprocess/process.py\", line 99, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/Users/syeehyn/opt/anaconda3/lib/python3.7/site-packages/requests/api.py\", line 75, in get\n",
+      "    return request('get', url, params=params, **kwargs)\n",
+      "  File \"/Users/syeehyn/opt/anaconda3/lib/python3.7/site-packages/requests/models.py\", line 828, in content\n",
+      "    self._content = b''.join(self.iter_content(CONTENT_CHUNK_SIZE)) or b''\n",
+      "  File \"../utils/utils.py\", line 27, in create_xml_df\n",
+      "    priority = soup.findAll('priority')\n",
+      "  File \"/Users/syeehyn/opt/anaconda3/lib/python3.7/site-packages/requests/api.py\", line 60, in request\n",
+      "    return session.request(method=method, url=url, **kwargs)\n",
+      "Traceback (most recent call last):\n",
+      "  File \"../utils/utils.py\", line 25, in create_xml_df\n",
+      "    lastmod = soup.findAll('lastmod')\n",
+      "  File \"/Users/syeehyn/.local/lib/python3.7/site-packages/multiprocess/process.py\", line 99, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/Users/syeehyn/.local/lib/python3.7/site-packages/multiprocess/pool.py\", line 121, in worker\n",
+      "    result = (True, func(*args, **kwds))\n",
+      "  File \"/Users/syeehyn/opt/anaconda3/lib/python3.7/site-packages/requests/models.py\", line 750, in generate\n",
+      "    for chunk in self.raw.stream(chunk_size, decode_content=True):\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m~/.local/lib/python3.7/site-packages/multiprocess/pool.py\u001b[0m in \u001b[0;36mnext\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    732\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 733\u001b[0;31m                 \u001b[0mitem\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_items\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpopleft\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    734\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mIndexError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: pop from an empty deque",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-f0a76342373e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_sitemap_df\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mcfg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Desktop/wi20/dsc180a/hindroid/utils/utils.py\u001b[0m in \u001b[0;36mcreate_sitemap_df\u001b[0;34m(**cfg)\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mPool\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnw\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m         \u001b[0mdf_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtqdm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimap_unordered\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcreate_xml_df\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxmls\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtotal\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxmls\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mposition\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mleave\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m     \u001b[0mmetadata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m     \u001b[0mmetadata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfp\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'/metadata.csv'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/tqdm/std.py\u001b[0m in \u001b[0;36m__iter__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1079\u001b[0m             \"\"\"), fp_write=getattr(self.fp, 'write', sys.stderr.write))\n\u001b[1;32m   1080\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1081\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mobj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0miterable\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1082\u001b[0m             \u001b[0;32myield\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1083\u001b[0m             \u001b[0;31m# Update and possibly print the progressbar.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.7/site-packages/multiprocess/pool.py\u001b[0m in \u001b[0;36mnext\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    735\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_index\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_length\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    736\u001b[0m                     \u001b[0;32mraise\u001b[0m \u001b[0mStopIteration\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 737\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_cond\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    738\u001b[0m                 \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    739\u001b[0m                     \u001b[0mitem\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_items\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpopleft\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/threading.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    294\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m    \u001b[0;31m# restore state no matter what (e.g., KeyboardInterrupt)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    295\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mtimeout\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 296\u001b[0;31m                 \u001b[0mwaiter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0macquire\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    297\u001b[0m                 \u001b[0mgotit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    298\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
