--- a/notebooks/Step1_Generating_Sitemap.ipynb
+++ b/notebooks/Step1_Generating_Sitemap.ipynb
@@ -2,12 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append('../src')\n",
+    "import json\n",
     "import utils\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -22,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,14 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7824/7824 [31:37<00:00,  4.12it/s]  \n"
+      "  0%|          | 12/7824 [01:41<5:04:22,  2.34s/it] "
      ]
     }
    ],
@@ -262,9 +272,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dask",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "dask"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -276,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
