--- a/notebooks/Step2_Sampling_Apps.ipynb
+++ b/notebooks/Step2_Sampling_Apps.ipynb
@@ -32,16 +32,33 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/syeehyn/Desktop/wi20/dsc180a/hindroid\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
        "{'mode': 'random',\n",
        " 'size': 150,\n",
-       " 'op': '../config/random_sampling_urls.json',\n",
-       " 'metadata_dir': '../data/interim/metadata/metadata.csv',\n",
-       " 'fp': '../data'}"
+       " 'op': './config/data-params.json',\n",
+       " 'metadata_dir': './data/interim/metadata/metadata.csv',\n",
+       " 'fp': './data'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
