--- a/notebooks/Step3_Downloading_Decoding_APK.ipynb
+++ b/notebooks/Step3_Downloading_Decoding_APK.ipynb
@@ -21,7 +21,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cfg = json.load(open(\"../config/random_sampling_urls.json\"))"
+    "cfg = json.load(open(\"../config/data-params.json\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/syeehyn/Desktop/wi20/dsc180a/hindroid\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd .."
    ]
   },
   {
@@ -474,9 +491,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.6 64-bit ('dask-env': conda)",
    "language": "python",
-   "name": "python3"
+   "name": "python37664bitdaskenvconda749f9729b86948e1a8cdc521d945a91a"
   },
   "language_info": {
    "codemirror_mode": {
@@ -488,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
