--- a/notebooks/dev.ipynb
+++ b/notebooks/dev.ipynb
@@ -2,109 +2,145 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from glob import glob"
+    "import dask\n",
+    "from dask.distributed import Client\n",
+    "import dask.dataframe as dd\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import json\n",
+    "from tqdm import tqdm\n",
+    "from scipy import sparse\n",
+    "import psutil\n",
+    "NUM_WORKER = psutil.cpu_count(logical = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = dd.read_csv('../data/datasets/interim/features/*.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>block</th>\n",
+       "      <th>invocation</th>\n",
+       "      <th>package</th>\n",
+       "      <th>method_name</th>\n",
+       "      <th>app</th>\n",
+       "      <th>malware</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>public constructor &lt;init&gt;()Va.smali</td>\n",
+       "      <td>invoke-direct</td>\n",
+       "      <td>Landroid/arch/a/a/b;</td>\n",
+       "      <td>&lt;init&gt;</td>\n",
+       "      <td>%D8%AA%D9%84%D8%A7%D9%88%D8%A7%D8%AA-%D8%AE%D8...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>public constructor &lt;init&gt;()Va.smali</td>\n",
+       "      <td>invoke-direct</td>\n",
+       "      <td>Ljava/util/HashMap;</td>\n",
+       "      <td>&lt;init&gt;</td>\n",
+       "      <td>%D8%AA%D9%84%D8%A7%D9%88%D8%A7%D8%AA-%D8%AE%D8...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>public a(Ljava/lang/Object;)Za.smali</td>\n",
+       "      <td>invoke-virtual</td>\n",
+       "      <td>Ljava/util/HashMap;</td>\n",
+       "      <td>containsKey</td>\n",
+       "      <td>%D8%AA%D9%84%D8%A7%D9%88%D8%A7%D8%AA-%D8%AE%D8...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>constructor &lt;init&gt;(Landroid/arch/a/a/b$c;Landr...</td>\n",
+       "      <td>invoke-direct</td>\n",
+       "      <td>Landroid/arch/a/a/b$e;</td>\n",
+       "      <td>&lt;init&gt;</td>\n",
+       "      <td>%D8%AA%D9%84%D8%A7%D9%88%D8%A7%D8%AA-%D8%AE%D8...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>constructor &lt;init&gt;(Landroid/arch/a/a/b$c;Landr...</td>\n",
+       "      <td>invoke-direct</td>\n",
+       "      <td>Landroid/arch/a/a/b$e;</td>\n",
+       "      <td>&lt;init&gt;</td>\n",
+       "      <td>%D8%AA%D9%84%D8%A7%D9%88%D8%A7%D8%AA-%D8%AE%D8...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "['tappme',\n",
-       " '1xbet',\n",
-       " 'fgteev-videos',\n",
-       " 'princess-spa-girls-games',\n",
-       " 'navtrack-rt',\n",
-       " 'cigar-en-fuego',\n",
-       " 'contratey',\n",
-       " 'moto-sport-simulator',\n",
-       " 'manegeapp',\n",
-       " 'spurgeon-iit',\n",
-       " '%D8%AA%D9%84%D8%A7%D9%88%D8%A7%D8%AA-%D8%AE%D8%A7%D8%B4%D8%B9%D8%A9-%D9%88%D9%85%D9%86%D8%A7%D8%AC%D8%A7%D8%A9-%D9%85%D8%A4%D8%AB%D8%B1%D8%A9-%D8%AC%D8%AF%D8%A7-%D8%A8%D8%AF%D9%88%D9%86-%D8%A7%D9%86%D8%AA%D8%B1%D9%86%D8%AA',\n",
-       " '99-clones',\n",
-       " '%E0%B8%84%E0%B8%B3%E0%B8%96%E0%B8%B2%E0%B8%A1-%E0%B8%AD%E0%B8%B0%E0%B9%84%E0%B8%A3%E0%B9%80%E0%B8%AD%E0%B9%88%E0%B8%A2-%E0%B8%82%E0%B8%B3%E0%B9%86%E0%B8%AE%E0%B8%B2%E0%B9%86-100',\n",
-       " 'klub-uang',\n",
-       " 'editor-plus-photo-editing-tool',\n",
-       " 'lovely-kitty-poops-cat-game',\n",
-       " 'leet-one-in-the-quiver-mcpe',\n",
-       " 'hci',\n",
-       " 'caffe-tazza',\n",
-       " 'forms-app',\n",
-       " 'free-stopwatch',\n",
-       " 'pick-the-perfect-puppy',\n",
-       " 'social-aider-ig',\n",
-       " '777-%D1%81%D0%BB%D0%BE%D1%82%D0%BE%D0%B2-%D0%B7%D0%BD%D0%B0%D0%BC%D0%B5%D0%BD%D0%B8%D1%82%D1%8B%D0%B5-%D1%81%D0%BB%D0%BE%D1%82%D1%8B',\n",
-       " 'mobile-legends-quiz',\n",
-       " 'taxi-dakar',\n",
-       " 'usb-reverse-tethering',\n",
-       " 'kult%C5%ABra',\n",
-       " '1-d-royal',\n",
-       " 'atrapa-las-hamburguesas',\n",
-       " 'vha',\n",
-       " 'zga',\n",
-       " 'pilgrim-s-progress-free',\n",
-       " 'math-brain-train',\n",
-       " 'safe-sound',\n",
-       " 'usm-app-control',\n",
-       " 'runnig-gps-free',\n",
-       " 'kata-bijak-islami-dalam-alquran-lengkap',\n",
-       " 'yar%C4%B1na-bak%C4%B1%C5%9F-h%C4%B1zl%C4%B1-eri%C5%9Fim',\n",
-       " 'sentio-file-explorer',\n",
-       " 'tecnoversia',\n",
-       " 'schaffenburg',\n",
-       " 'spelling-corrector%E2%80%93-pronunciation-spell-checker',\n",
-       " 'cieo',\n",
-       " 'stotras-all-gods',\n",
-       " 'covideo',\n",
-       " 'legazy-iptv-player',\n",
-       " 'great-slots-slot-machines',\n",
-       " 'guide-for-lego-juniors-quest',\n",
-       " 'kitty-frames-photo-editor',\n",
-       " '%EA%B8%89%EB%98%A5',\n",
-       " 'christmas-ringtones',\n",
-       " 'gramophone-music-player',\n",
-       " 'tamil-tech',\n",
-       " 'qx104',\n",
-       " 'music-star-photo-montage',\n",
-       " 'lagu-andra-and-the-backbone',\n",
-       " 'gujarati-keyboard-izee',\n",
-       " 'welcome-to-croatia',\n",
-       " 'pdf-invoice-generator',\n",
-       " 'best-lines98',\n",
-       " 'black-box',\n",
-       " 'world-news',\n",
-       " 'umvpn-free-vpn-proxy-ip-unblocker',\n",
-       " 'grove-brew-house',\n",
-       " 'tabakh-al-freej',\n",
-       " 'maternity-clothes',\n",
-       " 'burmese-english-translator',\n",
-       " 'zigzag-line-2-players',\n",
-       " 'manateq',\n",
-       " 'concurso-sabesp-provas-mat%C3%A9ria-completa-gabarito',\n",
-       " 'theme-for-nokia5-1-plus-fancy-light-wallpaper',\n",
-       " 'little-mary-slots-casino-bar',\n",
-       " 'web-saku',\n",
-       " 'carener-s',\n",
-       " 'qapp-quran-daily',\n",
-       " 'airplane-photo-frames',\n",
-       " 'princess-bubble-rescue-swan',\n",
-       " '%D8%B5%D9%88%D8%B1-%D8%AE%D9%84%D9%81%D9%8A%D8%A7%D8%AA']"
+       "                                               block      invocation  \\\n",
+       "0                public constructor <init>()Va.smali   invoke-direct   \n",
+       "1                public constructor <init>()Va.smali   invoke-direct   \n",
+       "2               public a(Ljava/lang/Object;)Za.smali  invoke-virtual   \n",
+       "3  constructor <init>(Landroid/arch/a/a/b$c;Landr...   invoke-direct   \n",
+       "4  constructor <init>(Landroid/arch/a/a/b$c;Landr...   invoke-direct   \n",
+       "\n",
+       "                  package  method_name  \\\n",
+       "0    Landroid/arch/a/a/b;       <init>   \n",
+       "1     Ljava/util/HashMap;       <init>   \n",
+       "2     Ljava/util/HashMap;  containsKey   \n",
+       "3  Landroid/arch/a/a/b$e;       <init>   \n",
+       "4  Landroid/arch/a/a/b$e;       <init>   \n",
+       "\n",
+       "                                                 app  malware  \n",
+       "0  %D8%AA%D9%84%D8%A7%D9%88%D8%A7%D8%AA-%D8%AE%D8...        0  \n",
+       "1  %D8%AA%D9%84%D8%A7%D9%88%D8%A7%D8%AA-%D8%AE%D8...        0  \n",
+       "2  %D8%AA%D9%84%D8%A7%D9%88%D8%A7%D8%AA-%D8%AE%D8...        0  \n",
+       "3  %D8%AA%D9%84%D8%A7%D9%88%D8%A7%D8%AA-%D8%AE%D8...        0  \n",
+       "4  %D8%AA%D9%84%D8%A7%D9%88%D8%A7%D8%AA-%D8%AE%D8...        0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[i.split('/')[-1] for i in glob('../data/datasets/raw/smali/*')]"
+    "df.head()"
    ]
   },
   {
